part1 - Speech to text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
         <item>Video</item>
         <item>Animation</item>
     </string-array>
+
+    <string name="STT_hint">Tap button and wait for prompt, then speak!</string>
+
 </resources>
