part4 - play video & save state when rotated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     </string-array>
 
     <string name="STT_hint">Tap button and wait for prompt, then speak!</string>
+    <string name="TTS_hint">Type something you want me to say!</string>>
 
 </resources>
