--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">MultimediaMedley</string>
+    <string name="app_name_">MultimediaMedley</string>
+    <string name="app_name">DemoSuite</string>
     <string name="title_action_detail">Action Detail</string>
     <string-array name="actions">
         <item>Example</item>
